# Kriyam-TamperFlow

./: .gitignore  LEADERBOARD.md  LICENSE  METRICS.md  README.md  pyproject.toml  requirements.txt
kriyam/: compression.py  metrics.py  report.py
kriyam/loaders/: __init__.py  base.py  local.py
predictions/ADCD-v6/: kriyam_0001_C0.json  kriyam_0001_C2.json  kriyam_0001_C4.json  kriyam_0002_C0.json  kriyam_0002_C2.json  kriyam_0002_C4.json  kriyam_0003_C0.json  kriyam_0003_C2.json  kriyam_0003_C4.json  kriyam_0004_C0.json  kriyam_0004_C2.json  kriyam_0004_C4.json  kriyam_0005_C0.json  kriyam_0005_C2.json  kriyam_0005_C4.json  kriyam_0006_C0.json  kriyam_0006_C2.json  kriyam_0006_C4.json  kriyam_0007_C0.json  kriyam_0007_C2.json  kriyam_0007_C4.json  kriyam_0008_C0.json  kriyam_0008_C2.json  kriyam_0008_C4.json  kriyam_0009_C0.json  kriyam_0009_C2.json  kriyam_0009_C4.json  kriyam_0010_C0.json  kriyam_0010_C2.json  kriyam_0010_C4.json  kriyam_0011_C0.json  kriyam_0011_C2.json  kriyam_0011_C4.json  kriyam_0012_C0.json  kriyam_0012_C2.json  kriyam_0012_C4.json  kriyam_0013_C0.json  kriyam_0013_C2.json  kriyam_0013_C4.json  kriyam_0014_C0.json  (+3110 more)
reports/: ADCD-v6-report-v5.html  CAFTB-v6-report-v5.html  DTD-v6-report-v5.html  FFDN-v6-report-v5.html  MVSS-v4-report-v5.html
results/ADCD-v6/: scores.json  (+2 more)
scripts/: download_data.py  evaluate.py  report_from_cache.py  run_compression_tiers.py  validate_predictions.py
tests/: test_compression.py  test_evaluate.py  test_loaders.py  test_metrics.py  test_report.py  test_run_compression_tiers.py  test_validate_predictions.py
(+12612 files in other folders)
