[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kriyam-tamperflow"
version = "0.1.0"
description = "Benchmark suite for document tampering detection on Indic-language documents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "pillow>=10.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "datasets>=2.18",
    "huggingface-hub>=0.22",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "mypy>=1.9",
    "black>=24.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kriyam*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
